@@ -3,6 +3,10 @@ New entries should be added at the top
 
 2004-07-07 Fixed a bug in dynamic_demo_wx
 
+
+2004-07-07 backend_gtk.py: raise SystemExit immediately if 
+	   'import pygtk' fails - SC
+
 2004-07-05 Added new mathtext commands \over{sym1}{sym2} and
            \under{sym1}{sym2}
 
